Change colour scheme

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 :root {
   /* colours */
   --background-color: white;
-  --text-color: black;
+  --text-color: rgb(24, 22, 147);
   --header-color: black;
 
   /* typography */
